Wrap and bug fix (#119)
fix column size

--- a/src/components/RangePicker/style.less
+++ b/src/components/RangePicker/style.less
@@ -90,7 +90,7 @@
   display: flex;
 }
 .wrapper-all-rangePicker{
-  width: @range-picker-width;
+  width: 590px;
   border: 1px solid #DDDDDD;
   background: #FFF;
 }
